# Churn-Predictor

./: .gitignore  README.md  client.ipynb  exp.ipynb  pyproject.toml
tests/: test_model_loading.py
